Ensure dark mode text uses body text color

--- a/src/assets/less/FAQ.less
+++ b/src/assets/less/FAQ.less
@@ -232,10 +232,6 @@
     #faq-2407 {
       background-color: var(--darkBackground);
 
-      .cs-topper {
-        color: var(--darkSecondaryAccent);
-      }
-
       .cs-title,
       .cs-item-p {
         color: var(--bodyTextColorWhite);
@@ -250,7 +246,7 @@
 
         &.active {
           .cs-button {
-            color: var(--darkPrimaryAccent);
+            color: var(--bodyTextColorWhite);
           }
         }
       }
