--- a/src/assets/less/blog.less
+++ b/src/assets/less/blog.less
@@ -186,7 +186,7 @@
                     border-color: var(--darkSecondaryAccent);
 
                     .cs-toc-link {
-                        color: var(--darkSecondaryAccent);
+                        color: var(--bodyTextColorWhite);
                     }
                 }
             }
