--- a/src/assets/less/seo.less
+++ b/src/assets/less/seo.less
@@ -260,7 +260,7 @@
         color: var(--bodyTextColorWhite);
       }
       .cs-color, a {
-        color: var(--darkPrimaryAccent);
+        color: var(--bodyTextColorWhite);
       }
 
       p, li {
